[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ap-clerk-env"
version = "2.0.0"
description = "AI Accounts Payable Clerk — Three-Way Invoice Matching Environment"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "openai>=2.7.2",
    "httpx>=0.28.0",
    "openenv-core>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
